# hue-medicine-notifier

./: .gitignore  build.sh  compose.yaml
processor/: Cargo.toml  Dockerfile
processor/src/: hue_light_control.rs  main.rs
processor/src/modules/: connection.rs
web/: .gitignore  .prettierrc  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/prisma/: schema.prisma
web/prisma/migrations/20241220073342_init/: migration.sql
web/public/: manifest.json
web/src/app/: layout.tsx  page.tsx
web/src/app/_actions/: getAppVersion.ts  getLightsInfo.ts  registerPlan.ts  registerUser.ts
web/src/app/_components/: Footer.tsx  Loading.tsx  Refresh.tsx  Ruby.tsx  TimeZoneSelector.tsx  Title.tsx  Toggle.tsx  ToggleKidsMode.tsx
web/src/app/_context/: KidsModeContext.tsx
web/src/app/_lib/: hueLightToRGB.ts  minutesToTime.ts
web/src/app/admin/: page.tsx
web/src/app/admin/_lib/: hueColorToRGBA.ts
web/src/app/admin/lightInfo/[lightId]/: route.ts
web/src/app/register/: page.tsx
web/src/app/types/: Form.ts  HueLight.ts
web/src/app/users/[id]/dashboard/: PlanForm.tsx  PlanList.tsx  PlanPopup.tsx  page.tsx
web/src/app/users/[id]/dashboard/_actions/: actions.ts
web/src/app/users/[id]/dashboard/components/: FormParts.tsx  Log.tsx  Tab.tsx  TabItemsWrapper.tsx  TaskForm.tsx  TrainIcon.tsx
web/src/lib/: prisma.ts
